# Rizlium

./: .gitignore  Cargo.toml  implementation_note.md  readme.md
.VSCodeCounter/2023-07-03_17-10-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-28_13-29-08/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/workflows/: release.yml
assets/: 1.zip.rzl  info.yml  take.json
helium_framework/examples/: basic.rs
helium_framework/src/: tab_system.rs
helium_framework/src/widgets/: dock_buttons.rs
rizlium_chart/: Cargo.toml  chart-out.json
rizlium_chart/examples/midi2rzl/: convert.rs  main.rs  midi_rendering.rs  packaging.rs
rizlium_chart/src/: chart.rs  editing.rs  lib.rs  parse.rs  runtime.rs
rizlium_chart/src/chart/: color.rs  easing.rs  line.rs  note.rs  theme.rs  time.rs
rizlium_chart/src/editing/: chart_path.rs  commands.rs
rizlium_chart/src/editing/commands/: lines.rs  note.rs
rizlium_chart/src/parse/: official.rs  official_next.rs  rizline.rs
rizlium_chart/tests/: show_beat.rs
rizlium_editor/: Cargo.toml
rizlium_editor/locales/: zh-CN.yml
rizlium_editor/src/: chart_edit.rs  chart_loader.rs  editor_actions.rs  editor_commands.rs  extensions.rs  extra_window_control.rs  files.rs  global_actions.rs  hotkeys.rs  lib.rs  main.rs  notification.rs  settings_module.rs  ui.rs  utils.rs
rizlium_editor/src/chart_edit/: chart_path.rs  commands.rs
rizlium_editor/src/chart_edit/commands/: note.rs
rizlium_editor/src/extensions/: command_panel.rs  docking.rs  editing.rs  game.rs  i18n.rs  inspector.rs
rizlium_editor/src/extensions/editing/: large_game_cam.rs  note.rs  spline.rs  timeline.rs  tool_config_window.rs  tool_select_bar.rs  undo_redo.rs  world_view.rs
rizlium_editor/src/extensions/editing/world_view/: cam_response.rs  tools.rs
rizlium_editor/src/extensions/editing/world_view/tools/: tool_configs.rs
rizlium_editor/src/ui/: canvas_window.rs  dummy_window.rs  editing.rs  file_menu.rs  game_view.rs  information.rs  menu.rs  show_line_control.rs  tab_system.rs  widget_system.rs  widgets.rs
rizlium_editor/src/ui/editing/: note.rs  spline.rs  timeline.rs
rizlium_editor/src/ui/tab_system/: canvas_window.rs  file_menu.rs  game_view.rs  note_edit.rs  show_line_control.rs  spline_edit.rs
rizlium_editor/src/ui/widgets/: dock_buttons.rs  preset.rs  recent_file_buttons.rs
rizlium_editor/src/utils/: dot_path.rs
rizlium_render/: Cargo.toml
rizlium_render/assets/: info.yml  particle.json
rizlium_render/src/: chart.rs  chart_loader.rs  hit_parcticles.rs  lib.rs  line_rendering.rs  masks.rs  notes.rs  rings.rs  theme.rs  time.rs  time_and_audio.rs
rizlium_render_main/: Cargo.toml
rizlium_render_main/src/: main.rs
rizlium_video_renderer/: Cargo.toml
rizlium_video_renderer/src/: main.rs
