[workspace]
members = [
    "rizlium_chart",
    "rizlium_render",
    "rizlium_editor",
    # "rizlium_video_renderer",
]
repository = "https://github.com/liquidhelium/Rizlium"
resolver = "2"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.71.0"
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]

# Add this config to your root Cargo.toml (virtual manifest)
[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

# 在调试模式下只启用少量的优化措施：
[profile.dev]
opt-level = 1

# 像下面这样对依赖的库启用更高级别的优化（包括 Bevy ），但不会包括我们自己的代码：
[profile.dev.package."*"]
opt-level = 3

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"


# [profile.release]
# debug = true
