[package]
name = "rizlium_chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-easing = "1"
log="0"
snafu="0"
serde = {version = "1.0", optional = true, features = ["derive"]}
num_enum = "0.7"
strum = {version = "0.26", features = ["derive"]}
enum_dispatch = {version = "*", optional = true}
replace_with = "*"

[dev-dependencies]
serde_json = "*"
static_init = "*"



[features]
default = ["serde", "runtime", "editing", "all-formats"]
runtime = []
editing = ["dep:enum_dispatch"]
serde = ["serialize", "deserialize"]
serialize = ["dep:serde"]
deserialize = ["dep:serde"]
all-formats = ["rizline"]
rizline = []

