[package]
name = "rizlium_chart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
simple-easing = "1"
tracing = "*"
snafu="0.8"
serde = {version = "1.0", optional = true, features = ["derive"]}
num_enum = "0.7"
strum = {version = "0.26", features = ["derive"]}
enum_dispatch = {version = "*", optional = true}
replace_with = "*"
serde_json = "*"

[dev-dependencies]
serde_json = "1"
clap = {version="~4.5", features= ["derive"]}
midly = "0"
devault = "0"
rustysynth = "1.3"
mp3lame-encoder = "0.2.1"
zip = "2.2.2"
anyhow = "*"

[[example]]
name = "midi2rzl"


[features]
default = ["serde", "runtime", "editing", "all-formats"]
runtime = []
editing = ["dep:enum_dispatch"]
serde = ["serialize", "deserialize"]
serialize = ["dep:serde"]
deserialize = ["dep:serde"]
all-formats = ["rizline"]
rizline = []

