[package]
name = "rizlium_editor"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rizlium_render = {path="../rizlium_render"}
bevy_egui = {git = "https://github.com/liquidhelium/bevy_egui"}
egui = "0.26"
egui_dock = {version = "0.11.1", features = ["serde"]}
egui_tracing = {git = "https://github.com/liquidhelium/egui_tracing"}
egui-notify = "0.13"
tracing-subscriber = "*"
bevy-inspector-egui = "*"
# Todo: split x11, wayland and webgl2
bevy = { version = "0.12", default-features = false, features = [
    # "animation",
    "bevy_asset",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    # "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
    "wayland",
    "multi-threaded",
    "bevy_gizmos"
] }
rizlium_chart ={ path = "../rizlium_chart"}
bevy_mod_raycast = "*"
bevy-persistent = {version = "0.4", features = ["json","toml"]}
serde ={ version = "*", features = ["derive"]}
dirs = "*"
rfd = "*"
# Needed to poll Task
futures-lite = "2"
indexmap = {version = "*", features = ["serde"]}
enum_dispatch = "*"
snafu = "*"
dyn-clone = "1"
smallvec = "1"

[dev-dependencies]
serde_json = "*"