[package]
name = "rizlium_editor"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rizlium_render = { path = "../rizlium_render" }
bevy_egui = "0.34"
egui = "0.31"
egui_dock = { version = "0.16", features = ["serde"] }
# egui_tracing = "0.2"
egui-notify = "0.19"
tracing-subscriber = "*"
bevy-inspector-egui = "0.31"
# Todo: split x11, wayland and webgl2
bevy = { version = "0.16", default-features = false, features = [
    # "animation",
    "bevy_asset",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    # "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
    "wayland",
    "multi_threaded",
    "bevy_gizmos",
    "bevy_picking",
    "bevy_mesh_picking_backend"
] }
rizlium_chart = { path = "../rizlium_chart" }
bevy-persistent = { version = "0.8", features = ["json", "toml"] }
serde = { version = "*", features = ["derive"] }
dirs = "*"
rfd = {version = "*",default-features=false, features = ["async-std","gtk3"]}
# Needed to poll Task
futures-lite = "2"
async-fs = "*"
indexmap = { version = "*", features = ["serde"] }
enum_dispatch = "*"
snafu = "*"
smallvec = { version = "1", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
serde_json = "*"
rust-i18n = "3"
helium_framework = { git = "https://github.com/liquidhelium/helium_framework", features = [
    "serde",
] }
bevy_prototype_lyon = { git = "https://github.com/liquidhelium/bevy_prototype_lyon_rizlium" }
[dev-dependencies]
serde_json = "*"

[package.metadata.i18n]
available-locales = ["en", "zh-CN"]
