[package]
name = "rizlium_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Todo: split x11, wayland and webgl2
bevy = { version = "0.13", default-features = false, features = [
    # "animation",
    "bevy_asset",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    # "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
    "wayland",
    "multi-threaded",
] }
bevy_kira_audio = { version = "0.19" }
kira = "*"
bevy_prototype_lyon = { git = "https://github.com/liquidhelium/bevy_prototype_lyon_rizlium" }
rizlium_chart = { path = "../rizlium_chart" }
zip = "*"
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
async-fs = "*"
futures-lite = "*"
snafu = "*"

[features]
trace = ["bevy/trace_tracy"]