[package]
name = "rizlium_video_renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rizlium_render = {path = "../rizlium_render"}
bevy = {version = "0.13", features = [
    # "animation",
    "bevy_asset",
    # "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    # "bevy_pbr",
    # "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    # "filesystem_watcher",
    "tonemapping_luts",
    "webgl2",
    "wayland",
    "multi-threaded",
]}
ffmpeg-sidecar = "*"
futures = "0.3"
futures-lite = "2.1"
async-fs = "*"
libc = "*"
bevy_egui = {git = "https://github.com/liquidhelium/bevy_egui"}
egui = "0.26"